--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,7 +7,12 @@ galaxy_info:
   platforms:
   - name: Ubuntu
     versions:
-    - Xenial
+      - 16.04
+  - name: CentOS
+    versions:
+      - 7.4
+  
+  license: license (BSD)
 
   galaxy_tags:
     - sencha
