--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,10 +7,10 @@ galaxy_info:
   platforms:
   - name: Ubuntu
     versions:
-      - 16.04
-  - name: CentOS
+      - xenial
+  - name: EL
     versions:
-      - 7.4
+      - 7
   
   license: license (BSD)
 
